package com.example.demo.Entities;

// Πιθανές τιμές για status
public enum ApprovalStatus {
    PENDING,
    APPROVED,
    REJECTED
}