@startuml AllInOne
' Layout & style
left to right direction
skinparam shadowing false
skinparam class {
  BackgroundColor White
  BorderColor #444444
  FontSize 12
}

' =========================
' Classes with attributes (top) and methods (below)
' =========================

class Users {
  .. DB Attributes ..
  + id : bigint «PK»
  + username : varchar «UK»
  + email : varchar «UK»
  + password : varchar
  + firstName : varchar
  + lastName : varchar
  + passport_number : varchar «UK»
  + afm : varchar «UK»
  + enabled : boolean
  + accountNonLocked : boolean
  + renterRequestStatus : varchar
  + profile_picture : bytea
  + profile_picture_content_type : varchar
  + profile_picture_filename : varchar

  .. REST ..
  + GET /api/users/{id}()
  + GET /api/users()
  + GET /api/users/me()
  + POST /api/users()
  + PATCH /api/users/{id}()
  + PATCH /api/users/{id}/roles()
  + DELETE /api/users/{id}()

  .. Service ..
  + updateUserPartial(id, fields)
  + updateUserRoles(id, add, remove)

  .. Repository ..
  + findByUsername(u)
  + existsByEmail(e)
}

class UserRoles {
  .. DB Attributes ..
  + user_id : bigint «FK»
  + role : Role

  .. Notes ..
  + UNIQUE (user_id, role)
}

class Properties {
  .. DB Attributes ..
  + id : bigint «PK»
  + name : varchar
  + description : text
  + country : varchar
  + city : varchar
  + street : varchar
  + postalCode : varchar
  + squareMeters : double
  + approval_status_id : bigint «FK»
  + price : decimal
  + owner_id : bigint «FK»

  .. REST ..
  + GET /api/properties/{id}()
  + GET /api/properties()
  + POST /api/properties()
  + PATCH /api/properties/{id}()
  + DELETE /api/properties/{id}()
  + GET /api/properties/{id}/closed-dates()
  + GET /api/properties/{id}/photos/{photoId}()
  + POST /api/properties/{id}/photos()
  + PATCH /api/properties/{id}/photos/{photoId}()
  + DELETE /api/properties/{id}/photos/{photoId}()
  + GET /api/users/{userId}/properties()

  .. Service ..
  + findByIdOptional(id)
  + getClosedDateRanges(propertyId)
  + getClosedDatesFlat(propertyId)

  .. Repository ..
  + findByOwnerId(ownerId)
  + findByApprovalStatus(status)
}

class PropertyPhotos {
  .. DB Attributes ..
  + id : bigint «PK»
  + property_id : bigint «FK»
  + image : bytea
  + contentType : varchar
  + filename : varchar

  .. Repository ..
  + findByIdAndPropertyId(photoId, propertyId)
  + countByPropertyId(propertyId)

  .. Notes ..
  + UNIQUE (property_id, filename)
}

class Rentals {
  .. DB Attributes ..
  + id : bigint «PK»
  + startDate : date
  + endDate : date
  + paymentAmount : decimal
  + approval_status_id : bigint «FK»
  + user_id : bigint «FK»
  + property_id : bigint «FK»

  .. REST ..
  + POST /api/rentals/add()
  + GET /api/rentals/all()
  + GET /api/rentals/by-renter/{renterId}()
  + PATCH /api/rentals/{id}/approve()
  + PATCH /api/rentals/{id}/reject()

  .. Service ..
  + createRental(propertyId, userId, start, end)
  + getAllRentalData()
  + getRentalsByRenter(renterId)
  + rejectExpiredPendingRentalsToday()

  .. Repository ..
  + findOverlappingByStatusIn(propertyId, start, end, statuses)
  + findByPropertyIdAndApprovalStatusInAndEndDateGreaterThanEqual(...)
}

class Reviews {
  .. DB Attributes ..
  + id : bigint «PK»
  + content : text
  + rating : int
  + createdAt : timestamp
  + user_id : bigint «FK»
  + property_id : bigint «FK»
  + rental_id : bigint «FK»

  .. REST ..
  + POST /api/properties/{propertyId}/reviews()
  + PATCH /api/reviews/{reviewId}()
  + DELETE /api/reviews/{reviewId}()
  + GET /api/properties/{propertyId}/reviews()
  + GET /api/reviews/user/{userId}()
  + GET /api/reviews()

  .. Service ..
  + addReview(propertyId, userId, content, rating)
  + updateReview(reviewId, userId, content, rating)
  + deleteReview(reviewId, userId)
  + adminDeleteReview(reviewId)
  + getReviewsForProperty(propertyId)
  + getReviewsByUser(userId)

  .. Repository ..
  + findByPropertyId(id)
  + findByUserId(id)

  .. Notes ..
  + (option) UNIQUE (user_id, rental_id)
}

class ApprovalStatus {
  .. DB Attributes ..
  + id : int «PK»
  + name : varchar   ' PENDING | APPROVED | REJECTED

  .. REST (optional) ..
  + GET /api/approval-status()
}

' =========================
' Associations
' =========================
Users --> UserRoles : has
Users --> Properties : owns
Properties --> PropertyPhotos : has
Users --> Rentals : makes
Properties --> Rentals : booked_for
Users --> Reviews : writes
Properties --> Reviews : about
Rentals --> Reviews : referenced_by
ApprovalStatus --> Properties : defines
ApprovalStatus --> Rentals : defines
UserRoles --> Users : for

@enduml

